--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -2,4 +2,22 @@
 
 <app-network-bar></app-network-bar>
 
+<main>
+
+  <section id="home">
+    <app-fade-in-block [triggerDelay]="50" [animationDelay]="5000" class="main_title">
+      <app-fade-in-item><h1>David Ferlay</h1></app-fade-in-item>
+      <app-fade-in-item><h1>Développeur web</h1></app-fade-in-item>
+      <app-fade-in-item><p style="width: 500px; font-size: .9em; margin-top: 30px; overflow: auto; box-sizing: border-box;">LOREM IPSUM LOREM IPSUM LOREM IPSUM LOREM IPSUM LOREM IPSUM LOREM IPSUM LOREM IPSUM
+
+      </p></app-fade-in-item>
+      <app-fade-in-item><button class="large">Commencer la visite</button></app-fade-in-item>
+    </app-fade-in-block>
+  </section>
+
+  <section id="review"></section>
+
+</main>
+
+
 <router-outlet></router-outlet>
