--- a/frontend/src/app/components/structure/network-bar/network-bar.component.scss
+++ b/frontend/src/app/components/structure/network-bar/network-bar.component.scss
@@ -12,7 +12,7 @@
       flex-direction: column;
       margin: 0;
       padding: 0;
-      gap: 24px;
+      gap: 5px;
 
       li{
 
@@ -20,6 +20,12 @@
 
           i{
             font-size: 1.3em;
+            padding: 10px;
+            transition: all .2s;
+
+            &:hover{
+              transform: translateY(-5px);
+            }
           }
         }
       }
@@ -28,12 +34,19 @@
 
   &:after{
     position: absolute;
-    width: 2px;
+    width: 1.5px;
     height: calc(100% - 60px - 2.6em);
     background: var(--grey);
     content: '';
     bottom: 0;
-    left: calc(50% - 1px);
+    left: calc(50% - .75px);
 
+  }
+}
+
+
+@media screen and (max-width: 770px){
+  :host{
+    display: none;
   }
 }
