--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -5,6 +5,12 @@
   --white: #ccd6f6;
   --grey: #8892b0;
 
+  --header-height: 80px;
+
+  html{
+    scroll-behavior: smooth;
+  }
+
   body{
     background: var(--navy);
     color: var(--grey);
@@ -13,15 +19,16 @@
     padding: 0;
 
     a{
-      color: var(--grey);
+      color: var(--white);
       transition: all .2s;
       cursor: pointer;
+      text-decoration: none;
 
       &:visited{
-        color: var(--grey);
+        color: var(--white);
       }
       &:hover{
-        color: var(--white);
+        color: var(--green);
       }
     }
 
@@ -29,7 +36,7 @@
       padding: 10px 20px;
       border: 2px solid var(--green);
       color: var(--green);
-      letter-spacing: 1px;
+      letter-spacing: 3px;
       background-color: transparent;
       border-radius: 3px;
       cursor: pointer;
@@ -38,6 +45,35 @@
       &:hover{
         background: rgba(100,255,218,0.1);
       }
+
+      &.large{
+        padding: 20px 30px;
+        font-size: 1.2em;
+      }
+    }
+
+    h1{
+      box-sizing: border-box;
     }
   }
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: var(--navy)
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--grey);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: var(--green)
 }
