Amélioration de la directive animation

--- a/frontend/src/app/animation/fadeIn/fade-in-item/fade-in-item.component.html
+++ b/frontend/src/app/animation/fadeIn/fade-in-item/fade-in-item.component.html
@@ -1,4 +1,4 @@
-<div [@openClose]="triggered ? 'open' : 'closed'">
+<div [@openClose]="{value: triggered ? 'open' : 'closed', params: {translateY: translateY, animationDuration: animationDuration}}">
   <ng-content ></ng-content>
 </div>
 
