--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -1,13 +1,14 @@
 main{
   margin-top: var(--header-height);
   padding: 25px 120px;
+  overflow: hidden;
 
   section{
-    height: calc(100vh - 126px);
+    height: 100vh;
     box-sizing: border-box;
 
-    &:not(:first-child){
-      height: 100vh;
+    &:first-child{
+      height: calc(100vh - 80px);
     }
   }
 
@@ -18,6 +19,7 @@ main{
     //font-family: "Roboto Condensed";
     font-weight: 700;
     letter-spacing: 3px;
+    color: var(--white);
   }
 
   p{
@@ -25,22 +27,37 @@ main{
     padding: 0;
     overflow: scroll;
   }
+
+  h2{
+    color: var(--white);
+    position: relative;
+    display: flex;
+    align-items: center;
+    width: 500px;
+
+    &::after{
+      background: var(--grey);
+      height: 1px;
+      width: 200px;
+      margin-left: 5px;
+      content: '';
+      display: block;
+    }
+  }
 }
 
-:host ::ng-deep .main_title{
+.main_title{
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
   left: 15%;
 
-  app-fade-in-item{
-    &:first-child{
-      color: var(--white);
-    }
+  h1:nth-child(2){
+    color: var(--grey);
+  }
 
-    button{
-      margin-top: 20px;
-    }
+  button{
+    margin-top: 20px;
   }
 }
 
