--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,4 +1,7 @@
+@import './animation.scss';
+
 :root{
+
   --green: #64ffda;
   --navy: #0a192f;
   --navy-shadow: rgba(2,12,27,0.7);
@@ -40,7 +43,7 @@
       background-color: transparent;
       border-radius: 3px;
       cursor: pointer;
-      transition: all .2s;
+      //transition: all .2s;
 
       &:hover{
         background: rgba(100,255,218,0.1);
