--- a/frontend/src/app/components/structure/header/header.component.html
+++ b/frontend/src/app/components/structure/header/header.component.html
@@ -2,15 +2,15 @@
 
   <div class="logo" ></div>
 
-  <nav animationChain [chainDelay]="480">
-    <ul animationChain [chainDelay]="120">
-        <li class="fadeIn" animationLink><a href="#review"><i class="fas fa-id-card"></i>À propos</a></li>
-        <li class="fadeIn" animationLink><a><i class="fas fa-briefcase"></i>Expérience</a></li>
-        <li class="fadeIn" animationLink><a><i class="fas fa-laptop-code"></i>Projets</a></li>
-        <li class="fadeIn" animationLink><a><i class="fas fa-envelope"></i>Contact</a></li>
+  <nav scrollAnimatedBlock [chainDelay]="480">
+    <ul scrollAnimatedBlock [chainDelay]="120">
+        <li class="fadeIn" scrollAnimatedNode><a href="#review"><i class="fas fa-id-card"></i>À propos</a></li>
+        <li class="fadeIn" scrollAnimatedNode><a><i class="fas fa-briefcase"></i>Expérience</a></li>
+        <li class="fadeIn" scrollAnimatedNode><a><i class="fas fa-laptop-code"></i>Projets</a></li>
+        <li class="fadeIn" scrollAnimatedNode><a><i class="fas fa-envelope"></i>Contact</a></li>
     </ul>
 
-    <button class="fadeIn" animationLink>Télécharger CV</button>
+    <button class="fadeIn" scrollAnimatedNode>Télécharger CV</button>
   </nav>
 
 </header>
