--- a/frontend/src/app/components/structure/header/header.component.scss
+++ b/frontend/src/app/components/structure/header/header.component.scss
@@ -15,6 +15,7 @@ header{
 
   &:not(.visible){
     transform: translateY(-100%);
+    backdrop-filter: none;
   }
 
   &:not(.sticky){
@@ -83,7 +84,6 @@ header{
 
       nav{
         position: fixed;
-        background: red;
         top: 0;
         bottom: 0;
         right: 0;
