--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -3,8 +3,11 @@
 :root{
 
   --green: #64ffda;
+  --dark-green: #4bbfa4;
   --navy: #0a192f;
   --navy-shadow: rgba(2,12,27,0.7);
+  --navy-transparent: rgba(10, 25, 47, .5);
+  --navy-lite: #112240;
   --white: #ccd6f6;
   --grey: #8892b0;
 
