delete: animations et update header sous header on scroll

--- a/frontend/src/app/admin/admin.component.html
+++ b/frontend/src/app/admin/admin.component.html
@@ -1,3 +1,9 @@
-<label>oui</label>
-<app-field label="Nom de la compétence"></app-field>
-<app-field label="Maîtrise de la compétence (en %)"></app-field>
+
+<section>
+  <form [formGroup]="skillFormGroup" (submit)="onSkillFormSubmit()">
+    <h5>Ajouter une compétence</h5>
+    <app-field label="Nom de la compétence" formControlName="label"></app-field>
+    <app-field label="Nom de la compétence" formControlName="level"></app-field>
+    <button type="submit">Enregistrer</button>
+  </form>
+</section>
