--- a/frontend/src/app/components/misc/field/field.component.html
+++ b/frontend/src/app/components/misc/field/field.component.html
@@ -1,5 +1,5 @@
 <div class="field-group">
   <label *ngIf="label">{{label}}</label>
-  <input type="text" class="field" [spellcheck]="spellcheck"/>
+  <input [type]="type" class="field" [spellcheck]="spellcheck" />
 </div>
 
