--- a/frontend/src/app/components/misc/avatar/avatar.component.scss
+++ b/frontend/src/app/components/misc/avatar/avatar.component.scss
@@ -35,14 +35,14 @@
 .networks{
   display: flex;
   justify-content: center;
-  gap: 20px;
+  gap: 10px;
   margin-top: 15px;
 
   .network{
     width: 50px;
     height: 50px;
-    border-radius: 5px;
-    border: 1px solid var(--green);
+    border-radius: 50%;
+    border: 2px solid var(--green);
     color: var(--green);
     display: flex;
     justify-content: center;
