--- a/frontend/src/app/components/misc/field/field.component.scss
+++ b/frontend/src/app/components/misc/field/field.component.scss
@@ -1,10 +1,9 @@
-
-
 .field-group{
   display: flex;
   flex-direction: column;
   position: relative;
   margin-top: 0.6em;
+  margin-bottom: 20px;
 
   label{
     font-weight: 400;
