--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -46,6 +46,10 @@
       background-color: transparent;
       border-radius: 3px;
       cursor: pointer;
+      border-top-left-radius: 50px;
+      border-top-right-radius: 50px;
+      border-bottom-left-radius: 50px;
+      border-bottom-right-radius: 50px;
       //transition: all .2s;
 
       &:hover{
