update button font

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -73,7 +73,7 @@
 <section id="contact">
   <h2 data-aos="fade-left"><span>04.</span>Me contacter</h2>
   <div class="form-container" >
-    <form data-aos="fade-up" data-aos-offset="200">
+    <form data-aos="zoom-in" data-aos-offset="200">
       <app-field label="Adresse e-mail" formControlName="label"></app-field>
       <app-field label="Objet" formControlName="level"></app-field>
       <textarea></textarea>
