--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -50,6 +50,7 @@
       border-top-right-radius: 50px;
       border-bottom-left-radius: 50px;
       border-bottom-right-radius: 50px;
+      font-family: Roboto;
       //transition: all .2s;
 
       &:hover{
